# bpak

./: .clang-format  .gitignore  .travis.yml  .vimrc  CMakeLists.txt  LICENSE  Makefile.am  README.rst  codecov.yml  configure.ac  cov.xml  coverity.sh
.github/workflows/: build.yml
docs/: .gitignore  architecture.dia  architecture.rst  build.rst  conf.py  index.rst  intro.rst  license.rst  python-examples.rst  python-library-reference.rst  user-guide.rst
docs/c-ref/: bsdiff.rst  bsdiff_hs.rst  bspatch.rst  bspatch_hs.rst  core.rst  merkle.rst  pkg.rst  transport.rst  utils.rst  verify.rst
docs/dg/: contributing.rst
docs/python/: 01_install.rst  02_package.rst  03_deps.rst
docs/python-ref/: bpak.rst
docs/ug/: 01_basics.rst  02_bpak_ids.rst  03_deps.rst  05_keystores.rst  advanced-signing.rst
examples/: c_example.c  dep_prepare.sh  deps.py  requires.txt
examples/python/: Dockerfile  package.py
examples/streaming/: streaming.c
fuzz/: Makefile.am  fuzz_one.c
include/bpak/: alg.h  bpak.h  bsdiff.h  bsdiff_hs.h  bspatch.h  bspatch_hs.h  crc.h  crypto.h  fifo.h  file.h  heatshrink_decoder.h  heatshrink_encoder.h  id.h  io.h  key.h  keystore.h  merkle.h  package.h  pipe.h  pkg.h  transport.h  utils.h  verify.h  version.h
lib/: CMakeLists.txt  Makefile.am  alg.c  alg_bsdiff.c  alg_bspatch.c  alg_heatshrink.c  alg_merkle.c  alg_remove.c  bpak.c  bpak.pc.in  bpakcrc.c  bsdiff.c  bsdiff_hs.c  bspatch.c  bspatch_hs.c  build_config.h.in  crypto.c  fifo.c  file.c  id.c  io.c  kcapi.c  keystore.c  keystore_load_from_file.c  mbedtls.c  mbedtls_wrapper.c  mbedtls_wrapper.h  mem.c  merkle.c  pipe.c  pkg.c  pkg_create.c  pkg_sign.c  pkg_verify.c  sais.c  sais.h  sha256.c  sha256.h  sha512.c  sha512.h  (+4 more)
lib/bsdiff/: bsdiff.c  bsdiff.h  bspatch.c  bspatch.h
lib/heatshrink/: heatshrink_decoder.c  heatshrink_encoder.c  heatshrink_encoder.h
python/: CMakeLists.txt  Makefile.am  bpak.py  meta.c  package.c  part.c  python_wrapper.c  python_wrapper.h  setup.py
python/bpak/: __init__.py  package.py  utils.py
src/: CMakeLists.txt  Makefile.am  add.c  bpak_tool.h  compare.c  create.c  crypto.h  delete.c  extract.c  generate.c  main.c  mbedtls.c  misc.c  set.c  show.c  sign.c  transport.c
src/uuid/: gen_uuid.c
test/: CMakeLists.txt  Makefile.am  common.c  common.sh  diff1_new.txt  diff1_origin.txt  nala.c  nala.h  test_add_meta.sh  test_alg_heatshrink.c  test_alignment.c  test_basic_file_io.c  test_basic_io.c  test_bsdiff.c  test_bsdiff_hs.c  test_core_meta.c  test_core_part.c  test_corrupt_header.sh  test_corrupt_merkle_tree.sh  test_corrupt_payload.sh  test_corrupt_payload2.sh  test_create.sh  test_crypto.c  test_delete.sh  test_dep_version.sh  test_extract.sh  test_fifo.c  test_file_ops.c  test_generate_id.sh  test_header_at_the_end.sh  test_help_output.sh  test_keystore_gen.sh  test_merkle.c  test_meta_align.c  test_misc.c  test_misc.sh  test_multiple_bsdiff.sh  test_openssl_resign.sh  test_openssl_sign.sh  test_python_create_package.py  (+22 more)
